# hospital_chatbot

./: Questionnaire.py  README.md  main.py  pyproject.toml
rag/: diet_info.txt  embedding.py  retrieve.py
rag/db/: chroma.sqlite3
rag/db/chroma_db1_metadata/: chroma.sqlite3
src/: question.py
this_is_langchain/: README.md  rag.py  spoonacular.py  tool_chain.py
this_is_langchain/db/chroma_db_monkeyking/: chroma.sqlite3
this_is_langchain/rubbish/: lemon.txt  off.py  usda_food.py  usda_search.py
this_is_langchain/tests/: chat_with_llm.py  structured_output.py  translator.py
